--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title></title>
+  <title>Chat</title>
 </head>
 <body>
   <div class="modul">
     <h3 class="modulTitle">Выберите псевдоним</h3>
     <input type="text" class="modulInput" autofocus name="user">
+    <span class="modulInvalidNickname">Выберите другой псевдоним</span>
+    <span class="modulNotNickname">Введите псевдоним</span>
     <button class="modulButton">Продолжить</button>
   </div>
-  <div class="container"></div>
+  <div class="container">
+    <div class="containerList">
+      <ul class="listNickname"></ul>
+    </div>
+    <div class="containerChat">
+      <div class="chatList"></div>
+      <input type="text" class="inputChat" placeholder="Ваше сообщение" autofocus>
+      <button class="buttonChat">Отправить</button>
+    </div>
+  </div>
 </body>
 </html>
